--- a/of.css
+++ b/of.css
@@ -40,11 +40,7 @@ div#contenedor {
     /* box-shadow: 10px; */
 }
 
-table#menu-pozos{
-    border: black
-    width:100%
 
-}
 div#primera-columna,
 div#tercera-columna {
     border: 1px solid grey;
@@ -87,6 +83,17 @@ div#contenido-interior {
     float: right;
     /* position:fixed; */
 }
+table#oil {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {background-color: #f2f2f2;}
 div#contenido-interior-seccion {
     
     background: darkorange;
@@ -261,12 +268,7 @@ textarea#comments {
     padding: 10px 10px 10px;
 }
 
-table#menu {
-    /* text-align:center; */
-    border-collapse: collapse;
-    width: 100%;
-    border: 1px solid black;
-}
+
 /* 
 td#menu {
 solid black
